--- a/package.json
+++ b/package.json
@@ -28,9 +28,12 @@
     "firebase": ">= 5.5.7 <8",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
+    "ngx-chips": "^2.1.0",
     "prismjs": "^1.19.0",
     "rxjs": "~6.5.4",
+    "slugify": "^1.3.6",
     "tslib": "^1.10.0",
+    "uuidv4": "^6.0.2",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
