--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "ngx-chips": "^2.1.0",
-    "prismjs": "^1.19.0",
+    "ngx-highlight-js": "^2.1.1",
     "rxjs": "~6.5.4",
     "slugify": "^1.3.6",
     "tslib": "^1.10.0",
