first deployment to production
removed full image size 2000x2000

--- a/.firebaserc
+++ b/.firebaserc
@@ -6,9 +6,17 @@
           "twita-dev"
         ]
       }
+    },
+    "twita-network": {
+      "hosting": {
+        "front-twita": [
+          "twita-network"
+        ]
+      }
     }
   },
   "projects": {
-    "dev": "twita-dev"
+    "dev": "twita-dev",
+    "prod": "twita-network"
   }
 }
