--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "deploy-dev": "firebase use dev && ng build && firebase deploy --only hosting"
+    "deploy-dev": "firebase use dev && ng build && firebase deploy --only hosting",
+    "deploy-prod": "firebase use prod && ng build --prod && firebase deploy --only hosting"
   },
   "private": true,
   "dependencies": {
